--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -191,7 +191,7 @@ footer .glyphicon:hover {
 					<li><a href="#gallery">Gallery</a></li>
 					<li><a href="#blog">Blog</a></li>
 					<li><a href="#contact">Contact</a></li>
-					<li><a href="/lytra/photos">Retrieve Photos</a></li>
+					<!-- <li><a href="/lytra/photos">Retrieve Photos</a></li> -->
 					
 				</ul>
 			</div>
@@ -384,9 +384,6 @@ footer .glyphicon:hover {
 					</div>
 				</div>
 			</div>
-				
-			(513) 445 - 9872
-			staff@lytra.me
 
 
 
