--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -59,7 +59,7 @@ body {
 
 <body>
       <form class="form-signin" role="form" method="POST" th:action="@{/admin/login/}" th:object='${user}'>
-        <h2 class="form-signin-heading">Please sign in</h2>
+        <h2 class="form-signin-heading">Lytra</h2>
         <label for="inputEmail" class="sr-only">Email address</label>
         
         <input type="text" id="inputEmail" class="form-control" placeholder="Username"  th:field="*{username}"></input>
